...
                    HStack {
                        Button(action: {
                            viewModel.logOut()
                        }) {
                            HStack {
                                Spacer()
                                Text("Sign out")
                                    .font(.headline)
                                    .foregroundColor(.red)
                                
                                Spacer()
                            }
                        }
...
