...
                                                viewModel.fetchNowPlaying(with: nowPlayingPage)
                                            }
                                        }
                                    }
                                }
                                .padding(.leading, 10)
                                .accessibilityIdentifier("nowPlayingGrid")
                            }
                            .scrollIndicators(.hidden)
                        } header: {
                            SectionHeader(title: "Now playing")
                        }
                        Spacer()
...
